# CarConnectivity-connector-renaultdacia

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml  codeql-analysis.yml
src/carconnectivity_connectors/renaultdacia/: charging.py  climatization.py  connector.py  vehicle.py
src/carconnectivity_connectors/renaultdacia/auth/: gigya_session.py
test/integration_test/: carConnectivity.json
