[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-connector-renaultdacia"
description = "CarConnectivity connector for Renault and Dacia services"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Till Steinbach" }
]
dependencies = [
    "carconnectivity>=0.11.6",
    "requests>=2.32.0,<3.0",
    "pyjwt>=2.8.0,<3.0"
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries"
]

[project.entry-points."carconnectivity.connectors"]
renaultdacia = "carconnectivity_connectors.renaultdacia.connector:Connector"

[project.urls]

[tool.setuptools_scm]
write_to = "src/carconnectivity_connectors/renaultdacia/_version.py"

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "src"
